syntax = "proto3";
package gloo.api.aws.v1;

option go_package = "github.com/solo-io/gloo/pkg/plugins/aws";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

// Upstream Spec for AWS Lambda Upstreams
message UpstreamSpec {
    // The AWS Region in which to run Lambda Functions
    string region = 1;
    // A [Gloo Secret Ref](https://gloo.solo.io/introduction/concepts/#Secrets) to an AWS Secret
    // AWS Secrets can be created with `glooctl secret create aws ...`
    // If the secret is created manually, it must conform to the following structure:
    //  ```
    //  access_key: <aws access key>
    //  secret_key: <aws secret key>
    //  ```
    string secret_ref = 2;
}

// Function Spec for Functions on AWS Lambda Upstreams
message FunctionSpec {
    // The Name of the Lambda Function as it appears in the AWS Lambda Portal
    string function_name  = 1;
    // The Qualifier for the Lambda Function. Qualifiers act as a kind of version
    // for Lambda Functions. See https://docs.aws.amazon.com/lambda/latest/dg/API_Invoke.html for more info.
    string qualifier = 2;
}
