syntax = "proto3";
package gloo.api.v1;

option go_package = "github.com/solo-io/gloo/pkg/plugins/azure";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

// Upstream Spec for Azure Functions Upstreams
message UpstreamSpec {
    // The Name of the Azure Function App where the functions are grouped
    string function_app_name  = 1;
    // A [Gloo Secret Ref](https://gloo.solo.io/introduction/concepts/#Secrets) to an [Azure Publish Profile JSON file](https://azure.microsoft.com/en-us/downloads/publishing-profile-overview/).
    // {{ hide_not_implemented "Azure Secrets can be created with `glooctl secret create azure ...`" }}
    // Note that this secret is not required unless Function Discovery is enabled
    string secret_ref = 2;
}

